--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500&family=Raleway:wght@100;200;300;400;500&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     <link
       rel="stylesheet"
@@ -45,14 +46,24 @@
         ><span class="m">u</span><span class="m">a</span>
         <br />
         <br />
-        <a href="RenameApp.exe" download>Download here</a>
+        <a style="color:aqua" href="RenameApp.sfx.exe" download>Download <br><i class="bd bi bi-download"></i></i></a><br>
+        <style>
+          .bd:hover{
+            color: gold;
+          }
+          .bd{
+            font-weight: bolder;
+            font-size: 35px;
+          }
+        </style>
+
       </h3>
       <div class="nav-container">
-        <a class="nav-tab" href="#tab-svelte">SVELTE</a
-        ><a class="nav-tab" href="#tab-esbuild">ESBUILD</a
-        ><a class="nav-tab" href="#tab-next">NEXT.JS</a
-        ><a class="nav-tab" href="#tab-typescript">TYPESCRIPT</a
-        ><a class="nav-tab" href="#tab-vite">VITE</a
+        <a class="nav-tab" href="https://kndjoshua.github.io/KnD/" target="_blank">WEBSITE <a href="https://kndjoshua.github.io/KnD/" target="blank"><i style="color: gold;" class="fg bi bi-box-arrow-up-right"></i></a></a
+        ><a class="nav-tab" href="https://www.youtube.com/channel/UCcgzlxuWPeucvPQjVro8xvA?sub_confirmation=1">YOUTUBE<a href="https://www.youtube.com/channel/UCcgzlxuWPeucvPQjVro8xvA?sub_confirmation=1" target="blank"><i style="color: gold;" class="fg bi bi-box-arrow-up-right"></i></a></a
+        ><a class="nav-tab" href="https://www.facebook.com/KnDjoshua/">FACEBOOK<a href="https://www.facebook.com/KnDjoshua/" target="blank"><i style="color: gold;" class="fg bi bi-box-arrow-up-right"></i></a></a
+        ><a class="nav-tab" href="https://github.com/KnDjoshua">GITHUB<a href="https://github.com/KnDjoshua" target="blank"><i style="color: gold;" class="fg bi bi-box-arrow-up-right"></i></a></a
+        ><a class="nav-tab" href="https://g.page/r/CfYWP5h2PhqDEB0/review">GOOGLE<a href="https://www.google.com/search?q=KnDjoshua+&newwindow=1&rlz=1C1BNSD_enUG932UG932&sxsrf=ALiCzsYcsS-ILJR_qId3eDM58jaCNDUIdQ%3A1669900286472&ei=_qeIY-K8HIy79u8PnPizuAs&ved=0ahUKEwjis4qrv9j7AhWMnf0HHRz8DLcQ4dUDCA8&uact=5&oq=KnDjoshua+&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzIICAAQogQQsAMyCAgAEKIEELADSgQIQRgBSgQIRhgAUPEHWPEHYMAKaAJwAHgAgAEAiAEAkgEAmAEAoAEByAECwAEB&sclient=gws-wiz-serp" target="blank"><i style="color: gold;" class="fg bi bi-box-arrow-up-right"></i></a></a
         ><span class="nav-tab-slider"></span>
       </div>
     </sectio>
